processed/jira/txt/LU/LU-4071.txt
Key:        LU-4071
Summary:    build error with unnecessary semicolon
Link:       https://jira.whamcloud.com/browse/LU-4071
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Minh Diep - TLC
Reporter:   Shuichi Ihara
Created:    Sun, 6 Oct 2013 09:52:30 +0000
Updated:    Thu, 14 Aug 2014 22:01:00 +0000
Resolved:   Fri, 25 Oct 2013 13:19:28 +0000
Labels:     patch

--- Environment ---
2.4.1, RHEL6.4, patchless client

--- Description ---
mpicc -DHAVE_CONFIG_H -I. -I../../..  -D__arch_lib__ -D_LARGEFILE64_SOURCE=1 -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -DLUSTRE_UTILS -include /usr/src/lustre-2.4.1/config.h -I/usr/src/lustre-2.4.1/libcfs/include -I/usr/src/lustre-2.4.1/lnet/include -I/usr/src/lustre-2.4.1/lustre/include  -g -Wall -fPIC -D_GNU_SOURCE -g -O2 -Werror -MT parallel_grouplock.o -MD -MP -MF .deps/parallel_grouplock.Tpo -c -o parallel_grouplock.o parallel_grouplock.c
/usr/src/lustre-2.4.1/libcfs/include/libcfs/posix/libcfs.h(280): error #64: declaration does not declare anything
          ;
          ^

compilation aborted for parallel_grouplock.c (code 2)
make[4]: *** [parallel_grouplock.o] Error 2
make[4]: Leaving directory `/usr/src/lustre-2.4.1/lustre/tests/mpi'
make[3]: *** [all-recursive] Error 1
make[3]: Leaving directory `/usr/src/lustre-2.4.1/lustre/tests'
make[2]: *** [all-recursive] Error 1
make[2]: Leaving directory `/usr/src/lustre-2.4.1/lustre'
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory `/usr/src/lustre-2.4.1'
make: *** [all] Error 2

--- Comment (yujian, Thu, 14 Aug 2014 21:50:42 +0000) ---
The issue was fixed in Lustre 2.5.2 by http://review.whamcloud.com/9678 with a different way.

--- Comment (pjones, Fri, 25 Oct 2013 13:19:28 +0000) ---
Landed for 2.6

--- Comment (ihara, Sun, 6 Oct 2013 23:27:20 +0000) ---
This is correct one. http://review.whamcloud.com/#/c/7864

It seems that this error happens when gcc is installed, but mpicc runs against Intel compiler. A quick workaround is replacing Intel compiler with gcc for mpicc, but something need to change environment.

--- Comment (pjones, Sun, 6 Oct 2013 14:11:13 +0000) ---
Minh

Could you please take care of landing this one?

Thanks

Peter

--- Comment (ihara, Sun, 6 Oct 2013 10:05:18 +0000) ---
build for patchless client failed due to unnecessary semicolon in libcfs.h.

here is patch to fix. http://review.whamcloud.com/7863
